--- a/CSS/THH.css
+++ b/CSS/THH.css
@@ -13,6 +13,11 @@ body{
     counter-reset: Serial;
 }
 
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 #loader{
   height: 100%;
   width: 100%;
